--- a/style.css
+++ b/style.css
@@ -1,23 +1,25 @@
-html, body {
+html {
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   background-color: rgb( 24, 24, 24 );
 }
+body {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: large;
+}
 
 h2 {
-  position: absolute;
-  top: 5%;
-  left: 50%;
-  transform: translateX( -50% );
+  width: 100%;
+  text-align: center;
   color: rgb( 61, 61, 61 );
-  transition: color .333s ease-in-out;
 }
 
 #hamburger {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 25px;
+  right: 15px;
   color: rgb( 61, 61, 61 );
 }
 
@@ -25,7 +27,9 @@ h2 {
   position: absolute;
   top: 0;
   left: -100%;
+  min-width: 242px;
   width: 33%;
+  max-width: 500px;
   height: 100%;
   background-color: rgb( 24, 24, 24 );
   box-shadow: 0 0 15px rgba( 0, 0, 0, 0.5 );
@@ -35,7 +39,7 @@ h2 {
 }
 #hamburger_close {
   position: absolute;
-  top: 10px;
+  top: 25px;
   left: -10px;
   color: rgb( 61, 61, 61 );
   display: block;
@@ -60,4 +64,5 @@ h2 {
 }
 .options>ul>li>a:hover {
   color: rgb( 121, 121, 121 );
+  text-decoration: underline;
 }
