--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h2 {
   width: 50%;
   max-width: 1000px;
   border-collapse: collapse;
-  border: 1px solid rgb( 61, 61, 61 ); }
+  border: 3px solid rgb( 69, 69, 69 ); }
 .service_icons {
   color: rgb( 61, 61, 61 );
   position: relative;
@@ -102,3 +102,27 @@ h2 {
   cursor: pointer; }
 .service_hover:hover .service_icons { color: rgb( 24, 24, 24 ); }
 .service_hover:hover .service_title { color: rgb( 24, 24, 24 ); }
+
+#hidden_paragraph {
+  z-index: -1;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translateX( -50% );
+  min-width: 400px;
+  width: 50%;
+  max-width: 800px;
+  background-color: rgb( 24, 24, 24 );
+  box-shadow: 0 0 15px rgba( 0, 0, 0, 0.5 );
+  transition: ease-in-out .222s; }
+.hidden_txt {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  color: rgb( 61, 61, 61 );
+  padding: 10px;
+  font-size: 1.5em;
+  text-align: left; }
