--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h2 {
   min-width: 242px;
   width: 33%;
   max-width: 500px;
-  height: 100%;
+  height: 400%;
   background-color: rgb( 24, 24, 24 );
   box-shadow: 0 0 15px rgba( 0, 0, 0, 0.5 );
   z-index: 1;
@@ -71,7 +71,7 @@ h2 {
 
 .service {
   position: absolute;
-  top: 15%;
+  top: 1000px;
   left: 50%;
   transform: translateX( -50% );
   min-width: 450px;
@@ -79,6 +79,17 @@ h2 {
   max-width: 1000px;
   border-collapse: collapse;
   border: 3px solid rgb( 69, 69, 69 ); }
+.service_header {
+  position: absolute;
+  top: 945px;
+  left: 50%;
+  transform: translateX( -50% );
+  min-width: 450px;
+  width: 50%;
+  max-width: 1000px;
+  color: rgb( 61, 61, 61 );
+  text-decoration: underline;
+}
 .service_icons {
   color: rgb( 61, 61, 61 );
   position: relative;
@@ -106,7 +117,7 @@ h2 {
 #hidden_paragraph {
   z-index: -1;
   position: absolute;
-  top: 15%;
+  top: 1000px;
   left: 50%;
   transform: translateX( -50% );
   min-width: 400px;
