--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 html {
   width: 100%;
-  height: 3500px;
+  height: 3100px;
   margin: 0;
   padding: 0;
-  background-color: rgb( 24, 24, 24 ); }
+  background-color: rgb( 24, 24, 24 );
+  scroll-behavior: smooth;
+  scroll-snap-type: proximity; }
 body {
   font-family: 'Courier New', Courier, monospace;
   font-size: large; }
