--- a/style.css
+++ b/style.css
@@ -11,7 +11,30 @@ body {
   font-size: large; }
 
 #col_red { color: rgb( 125, 66, 66 ); }
-
+/*
+#background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3100px;
+  opacity: 15%; }
+#background_container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3100px;
+  overflow: hidden; }
+#background_highlight {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5%;
+  background-color: rgba( 255, 255, 255, 0.075 );
+  pointer-events: none; }
+*/
 .options {
   position: fixed;
   top: 0;
@@ -84,6 +107,7 @@ body {
   width: 50%;
   max-width: 1000px;
   text-align: center;
+  background-color: rgb( 24, 24, 24 );
   color:rgb( 99, 99, 99 );
   border: 1px solid rgb( 125, 66, 66 );
   padding: 10px;
@@ -206,6 +230,7 @@ body {
   width: 66%;
   max-width: 1500px;
   border: 1px solid rgb( 125, 66, 66 );
+  background-color: rgb( 24, 24, 24 );
   color: rgb( 61, 61, 61 );
   column-count: 4; }
 .bio_img {
@@ -218,4 +243,3 @@ body {
   width: 100%;
   height: auto;
   text-align: center; }
-  
