--- a/style.css
+++ b/style.css
@@ -3,22 +3,32 @@ html {
   height: 3100px;
   margin: 0;
   padding: 0;
-  background-color: rgb( 24, 24, 24 );
+  background-color: rgb( 24, 24, 24 );  
   scroll-behavior: smooth;
-  scroll-snap-type: proximity; }
+  -ms-overflow-style: none;
+  scrollbar-width: none; }
+html::-webkit-scrollbar {
+  display: none; }
 body {
   font-family: 'Courier New', Courier, monospace;
-  font-size: large; }
+  font-size: large;
+  margin: 0;
+  position: relative; }
 
 #col_red { color: rgb( 125, 66, 66 ); }
-/*
+
 #background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 3100px;
-  opacity: 15%; }
+  background-image: linear-gradient( to bottom, rgba( 255, 255, 255, 0 ) 0px, rgba( 255, 255, 255, .777 ) 0px, rgba( 255, 255, 255, 0 ) 0px ), url('./img/background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: soft-light;
+  opacity: .1; }
 #background_container {
   position: absolute;
   top: 0;
@@ -26,15 +36,7 @@ body {
   width: 100%;
   height: 3100px;
   overflow: hidden; }
-#background_highlight {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 5%;
-  background-color: rgba( 255, 255, 255, 0.075 );
-  pointer-events: none; }
-*/
+
 .options {
   position: fixed;
   top: 0;
