--- a/style.css
+++ b/style.css
@@ -97,19 +97,21 @@ body {
   box-shadow: inset 0 0 15px rgba( 0, 0, 0, 0.5 );
   overflow: scroll;
   -ms-overflow-style: none;
-  scrollbar-width: none;  }
+  scrollbar-width: none; }
 .mission_statement {
   position: relative;
-  top: 5px;
+  top: 10px;
   left: 50%;
   transform: translateX( -50% );
-  min-width: 450px;
   width: 75%;
-  max-width: 1000px;
-  height: 200px;
+  max-width: 940px;
+  height: 240px;
   text-align: center;
   color:rgb( 99, 99, 99 );
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  padding: 0;
+  margin: 0;
+  line-height: 45px; }
 #logo {
   position: absolute;
   top: 15px;
