--- a/css/about.css
+++ b/css/about.css
@@ -30,9 +30,7 @@
   width: 100%;
   height: 50%;
   column-count: 4;
-  text-align: center;
-  padding: 10px;
-  margin: 0; }
+  text-align: center; }
 #about_bottom {
   position: relative;
   top: 50%;
