--- a/css/base.css
+++ b/css/base.css
@@ -29,7 +29,7 @@ body {
 #background {
   width: 100%;
   height: 3100px;
-  background-image: linear-gradient( to bottom, rgba( 255, 255, 255, 0 ) 0px, rgba( 255, 255, 255, .777 ) 0px, rgba( 255, 255, 255, 0 ) 0px ), url('./img/background.png');
+  background-image: url("../img/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
