--- a/css/base.css
+++ b/css/base.css
@@ -29,7 +29,7 @@ body {
 #background {
   width: 100%;
   height: 3100px;
-  background-image: url("../img/background.png");
+  background-image: url("../img/background.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
