--- a/css/about.css
+++ b/css/about.css
@@ -42,8 +42,10 @@
   text-align: center; }
 .about_img {
   display: block;
-  width: 100%;
-  height: auto; }
+  position: relative;
+  height: auto;
+  width: 60%;
+  left: 20%; }
 .about_img + p {
   display: block;
   width: 100%;
