--- a/css/base.css
+++ b/css/base.css
@@ -81,4 +81,5 @@ body {
   color: var( --mgray );
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
-  font-size: large; }
+  font-size: large;
+  z-index: 999999; }
