--- a/css/base_short.css
+++ b/css/base_short.css
@@ -17,7 +17,10 @@ html {
   scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  overflow: scroll; }
+  overflow: scroll;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */ }
 html::-webkit-scrollbar { display: none; }
 body {
   font-family: 'Courier New', Courier, monospace;
